CHANGELOG - What's new?

* prerelease-1.5.1.0.0 - [23-03-23]
    * "all" keyword and ',' symbol now interchangeable in normal and QuickSyntax `include` expressions

* prerelease-1.5.0.0.0 - [21-03-23]
    * More major changes to module/library system and `include` expression
    * Context name of value-derived types now the name of the derived type

* prerelease-1.4.0.1.0 - [20-03-23]
    * Windows-only functions in the IO library are now actually Windows-only

* prerelease-1.4.0.0.0 - [20-03-23]
    * Overhaul of module/library system, including `include` expression
    * Merged STD and Random libraries
    * Error tags in `error` statements are now expressions
    * Added character_list support for some built-in string functions