@@ -8,7 +8,7 @@
 	
   <ItemGroup>
     <Reference Include="ezrSquared">
-      <HintPath>..\..\bin\Release\net7.0\win-x86\ezrSquared.dll</HintPath>
+      <HintPath>..\..\bin\Release\net7.0\win-x64\ezrSquared.dll</HintPath>
     </Reference>
   </ItemGroup>
 	
