@@ -1,5 +1,8 @@
 CHANGELOG - What's new?
 
+* prerelease-1.5.1.0.1 - [25-03-23]
+    * Fixed bug in special function `equals`
+
 * prerelease-1.5.1.0.0 - [23-03-23]
     * "all" keyword and ',' symbol now interchangeable in normal and QuickSyntax `include` expressions
 
